# new_stat

./: .gitignore  predict_default_risk_models_with_pca.py  predict_default_risk_models_with_pca_fixed.py  predict_ensemble.csv  predict_extratrees.csv  predict_logistic.csv  predict_xgboost.csv  pyproject.toml
credit_code/: README.md  common_utils.py  run_all.py  train_extratrees.py  train_linear_regression.py  train_logistic.py  train_xgboost.py
data/credit_risk_outputs/: extra_trees_metrics.json  logistic_regression_metrics.json  submission_extra_trees.csv  submission_logistic_regression.csv  submission_xgboost.csv  xgboost_metrics.json
outputs/: feature_importance_extratrees.csv  feature_importance_linear.csv  feature_importance_linear_regression.csv  feature_importance_logistic.csv  feature_importance_xgboost.csv  model_comparison.csv  submission_ensemble.csv  submission_extra_trees.csv  submission_linear_regression.csv  submission_logistic_regression.csv  submission_xgboost.csv
outputs 2/: model_comparison.csv  submission_ensemble.csv  submission_linear_regression.csv
归档/: main.py
归档/credit_code/: run_all.py  train_linear_regression.py  train_xgboost.py
归档/outputs/: submission_extra_trees.csv  submission_xgboost.csv
